<resources>
    <string name="app_name">Photo on Text</string>
    <string name="app_slogan">Do the right thing</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="remove_ads">Remove ads</string>
    <string name="library">Library</string>
    <string name="background">Background</string>
    <string name="my_studio">My Studio</string>
    <string name="ads_here">ADS here!!</string>
    <string name="add_new_photo">Add new photo</string>
    <string name="setting">Setting</string>
    <string name="settings_and_more">Setting and more</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="editor">Editor</string>
    <string name="profile">Profile</string>
    <string name="header">S2Note</string>
    <string name="share">Share</string>
    <string name="home">Home</string>
    <string name="app_title">Photo on Text</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="app_title_html"><![CDATA[<font color="#FF1493">Photo</font> on Text]]></string>
    <string name="unknown">Unknown</string>

    <string name="remove_ads_for_the">Remove Ads for the</string>
    <string name="best_experience">Best Experience</string>
    <string name="lifetime">Lifetime</string>
    <string name="one_week">7 Days</string>
    <string name="monthly">Monthly</string>
    <string name="one_time_purchase">Onetime Purchase</string>
    <string name="best_offer">Best Offer</string>
    <string name="cancel_anytime">Cancel anytime</string>
    <string name="billed_monthly">Billed monthly. Cancel anytime</string>
    <string name="subscription_summary">Weekly payments, auto renew, cancel anytime.</string>
    <string name="string_continue">Continue</string>

    <string name="policy_payment">
        Payment will be charged to your Google Play account upon confirmation of purchase.
    </string>

    <string name="policy_auto_renew">
        Subscription will automatically renew according to the subscription plan you choose unless canceled 24 hours before the end of the current subscription plan.
    </string>

    <string name="policy_non_subscribed">
        Non-subscribed users can still use the application however some paid features may be limited.
    </string>

    <string name="policy_manage">
        You can manage your subscription or cancel your subscription at any time in.
    </string>

    <string name="claim_offer_now">
        Claim Offer Now
    </string>

    <string name="black_friday_offer">
        Black Friday Offer!
    </string>

    <string name="offer">
        Get %d%% Off
    </string>

    <string name="all_premium_editing_tools">
        All premium editing tools
    </string>

    <string name="offer_description">
        $29 first year, then $40/year. Auto renew. Cancel anytime
    </string>

    <!-- Subscription Screen -->
    <string name="unlimited_access">Unlimited Access</string>
    <string name="to_vivishow">To ViViShow\u0020</string>
    <string name="vivishow">ViViShow</string>
    <string name="pro">PRO</string>
    <string name="close">Close</string>

    <!-- Feature Descriptions -->
    <string name="feature_effects">Access all effects, frames</string>
    <string name="feature_watermark">Remove watermark</string>
    <string name="feature_ad_free">No Advertisement</string>
    <string name="feature_hd">High quality export</string>
    <string name="feature_unlock">Unlock 120 photo limit</string>


    <string name="premium">Premium</string>
    <string name="feature">Feature</string>

    <string name="transitions">Transitions</string>
    <string name="effects">Effects</string>
    <string name="frames">Frames</string>
    <string name="to_symbol">\u0020⇒\u0020</string>
    <string name="price_format">$%.2f/year</string>

    <string name="subscription_terms_intro">By continuing you agree to our %1$s and %2$s:</string>
    <string name="subscription_terms">Terms</string>
    <string name="subscription_privacy">Privacy policies</string>

    <string-array name="subscription_items">
        <item>Subscription gives you access to Vivishow\'s premium features, all ads will be removed.</item>
        <item>Subscription plans are automatically renewed and can be canceled anytime in Subscriptions on Google Play.</item>
        <item>You won’t be charged if subscription is canceled before trial period ends.</item>
        <item>Subscription is not required to use Vivishow.</item>
    </string-array>

    <string name="day">per Day</string>
    <string name="week">per Week</string>
    <string name="month">per Month</string>
    <string name="year">per Year</string>

    <!-- Subscription header -->
    <string name="unlock_pro_features">Unlock all pro features. No ads.</string>

    <!-- Subscription options -->
    <string name="free_trial">%s-days free trial</string>
    <string name="free_trial_description">Auto-renew. Cancel anytime</string>
    <string name="free_trial_price">23,000d</string>
    <string name="free_trial_price_dollar">$2.99</string>
    <string name="free_trial_price_period">per %s</string>
    <string name="subscription_free_trial">Free trial for %1$d days, then %2$s %3$s.</string>
    <string name="subscription_intro_offer">%1$d introductory cycles at %2$s %3$s, then %4$s %5$s.</string>
    <string name="subscription_base_plan">%1$s %2$s.</string>

    <string name="monthly_description">Auto-renew. Cancel anytime</string>
    <string name="monthly_price">60,000d</string>
    <string name="monthly_price_dollar">$8.99</string>
    <string name="monthly_price_period">per month</string>

    <string name="lifetime_description">One-time payment</string>
    <string name="lifetime_price">600,000d</string>
    <string name="lifetime_price_dollar">$20.99</string>
    <string name="lifetime_price_period">forever</string>

    <!-- Buttons -->
    <string name="free_trial_button">Start Free Trial</string>
    <string name="use_limited_version">or Use limited version</string>
    <string name="upgrade_subscription">Upgrade Subscription</string>"
    <string name="downgrade_subscription">Downgrade Subscription</string>
    <string name="continue_buy">Continue</string>
    <!-- Photo quality labels -->
    <string name="high_quality_export">High Quality Export</string>
    <string name="no_watermark">No Watermark</string>
    <string name="trendy">Trendy</string>

    <!-- Promotional tags -->
    <string name="best_deal">\u0020BEST DEAL</string>
    <string name="active">Active</string>

    <!-- Billing Fragment Strings -->
    <string name="checking_purchases">Checking your purchases…</string>
    <string name="loading_products">Loading available products…</string>
    <string name="select_product">Select a plan to purchase:</string>
    <string name="subscribed_message">You are subscribed to: %1$s\nThank you for your purchase!</string>
    <string name="error_message">Error: %1$s</string>

    <string name="weekly_plan">Weekly Plan</string>
    <string name="monthly_plan">Monthly Plan</string>
    <string name="yearly_plan">Yearly Plan</string>
    <string name="lifetime_plan">Lifetime Plan</string>
    <string name="premium_plan">Premium Plan</string>

    <string name="weekly_plan_button">1 Week: %1$s</string>
    <string name="monthly_plan_button">1 Month: %1$s</string>
    <string name="yearly_plan_button">1 Year: %1$s</string>
    <string name="lifetime_plan_button">Lifetime: %1$s</string>

    <string name="unknown_price">Unknown</string>
    <string name="select_plan_prompt">Please select a plan</string>
    <string name="no_products_found">No products found. Please check your network connection and Google Play account.</string>

    <string name="weekly">Weekly</string>
    <string name="yearly">Yearly</string>
    <string name="premium_title">Music Player Premium</string>
    <string name="premium_benefits_title">Premium Benefits:</string>
    <string name="restore_purchases">Restore Purchases</string>
    <string name="premium_benefits_list">• Ad-free music playback\n• Download music for offline listening\n• High-quality audio\n• Background playback\n• Unlimited playlists</string>

    <!--  ADS  -->
    <string name="ad_load_failed">Ad load failed</string>
    <string name="show_interstitial_ad">Show Interstitial Ad</string>"
    <string name="show_rewarded_ad">Show Rewarded Ad</string>"
    <string name="show_rewarded_interstitial_ad">Show Rewarded Interstitial Ad</string>"
    <string name="show_native_ad">Show Native Ad</string>
    <string name="admob_lover">Admob Lover</string>
    <string name="ad">Ads</string>
    <string name="reward_dialog_title">ONCE-IN-A-LIFETIME REWARD!</string>
    <string name="reward_dialog_message">Please watch our ad, you will get 20 coins</string>
</resources>