<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_library"
            android:icon="@drawable/ic_library"
            android:title="@string/library" />
        <item
            android:id="@+id/nav_background"
            android:icon="@drawable/ic_background"
            android:title="@string/background" />
        <item
            android:id="@+id/nav_my_studio"
            android:icon="@drawable/ic_my_studio"
            android:title="@string/my_studio" />
    </group>
    <item android:title="@string/settings_and_more">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_setting"
                android:title="@string/setting" />
            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/ic_help"
                android:title="@string/help" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_info"
                android:title="@string/about" />
        </menu>
    </item>
</menu>