<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/app_title"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/btnSettings"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/btnSettings"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/bg_rounded_gray"
            android:gravity="center"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="@id/tvTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvTitle">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_setting" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnLibrary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/bg_rounded_pink"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitle">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_library"
                app:tint="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/library"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>

        <androidx.constraintlayout.helper.widget.Flow
            android:id="@+id/buttonFlow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            app:constraint_referenced_ids="btnBackground,btnMyStudio,btnRemoveAds"
            app:flow_horizontalGap="8dp"
            app:flow_horizontalStyle="spread"
            app:flow_wrapMode="none"
            app:layout_constraintTop_toBottomOf="@id/btnLibrary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <LinearLayout
            android:id="@+id/btnBackground"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_rounded_blue"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="12dp">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/ic_background"
                app:tint="@color/white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/background"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnMyStudio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_rounded_purple"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="12dp">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/ic_my_studio"
                app:tint="@color/white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/my_studio"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnRemoveAds"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_rounded_orange"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="12dp">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/ic_disable_ads"
                app:tint="@color/white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/remove_ads"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>

        <FrameLayout
            android:id="@+id/adContainer"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_margin="16dp"
            android:background="#67EDAC"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/ads_here"
                android:textSize="30sp"
                android:textColor="#666666" />
        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>