<?xml version="1.0" encoding="utf-8"?>
<layout>

    <merge xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_sans_bold"
            android:text="@string/lifetime"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvBestOffer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:background="@drawable/bg_rounded_orange"
            android:fontFamily="@font/nunito_sans_bold"
            android:paddingHorizontal="@dimen/_8sdp"
            android:paddingVertical="4dp"
            android:text="@string/best_offer"
            android:textColor="@color/white"
            android:textSize="@dimen/_10sdp"
            app:layout_constraintBottom_toBottomOf="@id/tvTitle"
            app:layout_constraintStart_toEndOf="@id/tvTitle"
            app:layout_constraintTop_toTopOf="@id/tvTitle" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_3sdp"
            android:fontFamily="@font/nunito_sans_regular"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="$27.99" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:fontFamily="@font/nunito_sans_regular"
            android:text="@string/one_time_purchase"
            android:textAlignment="textStart"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintEnd_toStartOf="@+id/tvOriginalPrice"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitle" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvOriginalPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:fontFamily="@font/nunito_sans_regular"
            android:layout_marginHorizontal="@dimen/_3sdp"
            android:textSize="@dimen/_12sdp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="@+id/tvPrice"
            app:layout_constraintStart_toStartOf="@+id/tvPrice"
            app:layout_constraintTop_toBottomOf="@+id/tvPrice"
            tools:text="$12.99" />

    </merge>
</layout>